manifests-successful/redcap-1.10.21.tgz-manifest.yaml
---
# Source: redcap/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-redcap"
spec:
  type: ClusterIP
  ports:
    - name: 80tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: "my-release-redcap"
    release: my-release
---
# Source: redcap/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "my-release-redcap"
  labels:
    app: "my-release-redcap"
    chart: "redcap-1.10.21"
    heritage: Helm
    release: my-release
    app.kubernetes.io/name: redcap
    helm.sh/chart: redcap-1.10.21
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "10.6.13"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: "my-release-redcap"
      release: my-release
  template:
    metadata:
      labels:
        app: "my-release-redcap"
        release: my-release
      annotations:
        rollme: "m27XH"
    spec:
      containers:
      - args:
        - /bin/bash
        - /config/bootstrap.sh
        name: redcap
        image: ":"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - ls 
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 2
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
        ports:
        - containerPort: 80
          name: 80tcp
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/site/webtools2/ldap/
          name: ldap-config
        - mountPath: /config
          name: bootstrap
        - mountPath: /config/mail
          name: mail
      volumes:
      - name: ldap-config
        secret:
          defaultMode: 511
          items:
          - key: ldap_config.php
            path: ./ldap_config.php
          optional: false
          secretName: redcap-server-secrets
      - configMap:
          defaultMode: 256
          items:
          - key: bootstrap.sh
            path: ./bootstrap.sh
          name: "my-release-conf"
          optional: false
        name: bootstrap
      - configMap:
          defaultMode: 420
          name: "my-release-conf-mail"
          items:
          - key: msmtprc
            path: ./msmtprc
        name: mail
---
# Source: redcap/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redcap
  labels:
    app: redcap
    chart: "redcap-1.10.21"
    heritage: Helm
    release: my-release
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/client-body-timeout: "3600"
    nginx.ingress.kubernetes.io/client-header-timeout: "3600"
    nginx.ingress.kubernetes.io/client_max_body_size: 5000m
    nginx.ingress.kubernetes.io/proxy-body-size: 5000m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
spec:
  tls:
    - hosts:
      - redcap.company.com
      secretName: redcap
  rules:
  - host: "redcap.company.com"
    http:
      paths:
        - path: /
          pathType: Prefix        
          backend:
            service:
              name: my-release-redcap
              port:
                name: 80tcp
